@@ -165,6 +165,8 @@ public class ButtonHelper {
     public static void resolveInfantryDestroy(Player player, int totalAmount) {
         resolveInfantryRemoval(player, totalAmount);
         if (totalAmount <= 0 || !player.hasInf2Tech()) return;
+        if (player.getUnitsOwned().contains("pharadn_infantry") || player.getUnitsOwned().contains("pharadn_infantry2"))
+            return;
 
         if (player.hasTech("cl2")) {
             ButtonHelperFactionSpecific.offerMahactInfButtons(player, player.getGame());
@@ -2523,12 +2525,8 @@ public class ButtonHelper {
     }
 
     public static void deleteAllButtons(ButtonInteractionEvent event) {
-        if (event == null) {
-            return;
-        } else {
-            event.getMessage();
-        }
-        event.editComponents(Collections.emptyList()).queue(Consumers.nop(), BotLogger::catchRestError);
+        if (event == null) return;
+        event.getMessage().editMessageComponents(List.of()).queue();
     }
 
     public static void deleteTheOneButton(GenericInteractionCreateEvent event) {
@@ -3230,6 +3228,7 @@ public class ButtonHelper {
         if (player.getStasisInfantry() > 0 && player.hasTech("dsqhetinf")) {
             endButtons.add(Buttons.red(player.finChecker() + "startQhetInfRevival", "Revive Up To 2 Infantry"));
         }
+        endButtons.add(Buttons.red("deleteButtons", "Delete These Buttons"));
         return endButtons;
     }
 
